# Continual-Learning-for-Transformers

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
notebooks/: experiment_medical_ner.ipynb
src/: config.py  main.py
src/data/: dataset.py
src/models/: bert_model.py  ewc.py
src/preprocessing/: preprocessor.py  utils.py
src/training/: trainer.py  utils.py
tests/: test_dataset.py  test_ewc.py
